CHANGES IN FLTK 1.1.6

	- Documentation updates (STR #608)
	- FLUID didn't handle default function parameters
	  properly (STR #579)
	- Moving or resizing widgets in FLUID didn't always
	  update the widget panel (STR #600)
	- FLTK windows could appear off-screen on X11 (STR #586)
	- The configure script did not support
	  --disable-localfoo to completely disable image file
	  support (STR #582)
	- The Visual C++ 6.0 project files still listed the old
	  JPEG, PNG, and ZLIB library names (STR #577)
	- Fixed the scandir() conditional code for HP-UX 11i
	  (STR #585)
	- Fl_Text_Display didn't support CTRL/CMD-A/C (STR #601)
	- Watcom fixes (STR #581, STR #584, STR #594, STR #595)
	- Fixed library include order when building DSOs on
	  MacOS X (STR #596)
	- fl_xid() could cause a WIN32 application to crash (STR
	  #560, STR #576, STR #618)
	- Fl_Browser::remove_() removed the item from the list
	  before computing the item height, which caused
	  problems with some programs (STR #613)


CHANGES IN FLTK 1.1.5

	- Documentation updates (STR #568, STR #570)
	- Shortcuts were incorrectly underlined in multi-line
	  labels (STR #566)
	- More CMake updates (STR #499)
	- The Watcom C++ compiler needed a small change (STR
	  #567)
	- Added DESTDIR support and now remove all man pages for
	  the "uninstall" target (STR #545)
	- Fix PNG drawing on buggy WIN32 graphics cards (STR
	  #548)
	- The configure script didn't propagate the CPPFLAGS
	  environment variable (STR #549)
	- The numpad keys didn't work properly on WIN32 (STR
	  #502)
	- fl_input() and friends now set the input focus to the
	  text field when the dialog is shown (STR #553)
	- Fixed background color mixup when drawing Fl_Choice
	  menus (STR #544)
	- Fixed MingW makefiles (STR #550)
	- More VC++ project file tweaking (STR #559)
	- Fl_PNG_Image didn't use the png_set_trns_to_alpha
	  function when available (STR #547)
	- The FL_UNFOCUS event wasn't always sent when switching
	  tabs (STR #558)

